# ratls

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  publish-core.yml  publish-node.yml  publish-wasm.yml  publish_ratls_core_crate.yml
core/: ARCHITECTURE.md  BOOTCHAIN-VERIFICATION.md  Cargo.toml  README.md
core/src/: compose_hash.rs  connect.rs  error.rs  lib.rs  logging.rs  policy.rs  protocol.rs  tdx.rs  verifier.rs
core/src/dstack/: compose_hash.rs  config.rs  default_app_compose.rs  mod.rs  policy.rs  verifier.rs
core/src/tdx/: config.rs  mod.rs
core/tests/: integration_test.rs  tdx_live.rs
core/tests/data/: vllm_docker_compose.yml
node/: Cargo.toml  README.md  atls-fetch.d.ts  atls-fetch.js  index.cjs  index.d.ts  index.js  package.json  pnpm-lock.yaml  ratls-fetch.d.ts  ratls-fetch.js  test.mjs
node/examples/: README.md  ai-sdk-openai-demo.mjs
node/npm/darwin-arm64/: package.json
node/npm/darwin-x64/: package.json
node/npm/linux-arm64-gnu/: package.json
node/npm/linux-x64-gnu/: package.json
node/npm/win32-arm64-msvc/: package.json
node/npm/win32-x64-msvc/: package.json
node/scripts/: sync-versions.mjs
node/src/: lib.rs
python/: .gitignore  Cargo.toml  pyproject.toml
python/ratls/: __init__.py
python/src/: error.rs  io_adapter.rs  lib.rs  types.rs  verify.rs
python/tests/: __init__.py  test_verify.py
wasm/: Cargo.toml  README.md  build-wasm.sh  package.json
wasm/demo/: ai-sdk.html  minimal.html  minimal.js
wasm/proxy/: Cargo.toml  Dockerfile  README.md
wasm/proxy/deploy/: Caddyfile  benchmark.mjs  benchmark.sh  ratls-proxy.service  setup.sh
wasm/proxy/src/: main.rs
wasm/proxy/tests/: integration.rs
wasm/src/: atls-fetch.js  atls-fetch.test.js  hyper_io.rs  lib.rs  ratls-fetch.d.ts  ratls-fetch.js
