[workspace]
members = [
  "core",
  "wasm",
  "wasm/proxy",
  "node",
  "python",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.75"

# Shared dependency versions for workspace members.
# Use `{ workspace = true }` in member Cargo.toml to reference these.
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
