[package]
name = "ratls-core"
version = "0.1.0"
edition = "2021"
description = "Remote Attestation TLS (RA-TLS) core library for verifying TEE attestations over TLS connections"
license = "MIT"
repository = "https://github.com/concrete-security/ratls"
readme = "README.md"
keywords = ["tls", "attestation", "tee", "tdx", "confidential-computing", "ratls"]
categories = ["cryptography", "network-programming", "security"]

[features]
default = []
# Enable debug logging unconditionally (useful for WASM where env vars don't work)
debug-logging = []

[dependencies]
dstack-sdk-types = "0.1.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
anyhow = "1"
rustls-pki-types = { version = "1", features = ["std", "web"] }
webpki-roots = "0.26"

# Non-WASM dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dcap-qvl = "0.3"
rand = { version = "0.8", features = ["std"] }
tokio = { version = "1", features = ["io-util"] }
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "aws_lc_rs"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
env_logger = "0.11"

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
dcap-qvl = { version = "0.3", features = ["js"] }
rand = { version = "0.8", features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }
futures = { version = "0.3", features = ["std"] }
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "ring"] }
futures-rustls = { version = "0.26", default-features = false, features = ["ring"] }
js-sys = "0.3"
console_log = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "net", "io-util"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
