[package]
name = "ratls-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ratls-core = { path = "../core" }
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
ws_stream_wasm = "0.7"
async_io_stream = "0.3"
wasm-streams = "0.4"
web-sys = { version = "0.3", features = ["ReadableStream", "WritableStream", "ReadableStreamDefaultController"] }
httparse = "1.8"

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_json = { workspace = true }
