[package]
name = "atlas-proxy"
version = "0.0.1"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.5"

[dev-dependencies]
http = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
tokio-tungstenite = { version = "0.21", features = ["connect"] }
url = "2.5"
